# LuxCore

./: CMakeLists.txt  azure-pipelines.yml
source/: CMakeLists.txt  howto.txt  main.cpp
source/utilities/: log.cpp  log.h  luxutil.cpp  luxutil.h
source/vectary_data/: decoder.cpp  decoder.h  geometryData.cpp  geometryData.h
